# accelerate-llvm

./: cabal.project
.github/workflows/: demo.yml
demo/: .gitignore  Dockerfile  README.md  accelerate-llvm-demo.cabal
demo/app/: Main.hs
demo/bench/: Bench.hs
demo/docs/: index.md
demo/scripts/: run_bench.sh
demo/src/Demo/: Backend.hs  Image.hs  Mandelbrot.hs  NBody.hs
demo/test/: Spec.hs
